--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,18 @@ jobs:
           LS=$(ls | jq -cRsa 'split("\n")[:-1]')
           echo "IMAGE_LIST=$LS" >> $GITHUB_OUTPUT
           jq . <<< "$LS"
+
+  build-json-files:
+    runs-on: ubuntu-latest
+    needs: get-image-names
+    strategy:
+      matrix:
+        docker-image: ${{ needs.get-image-names.outputs.image-list }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Check Matrix
+        run: echo ${IMAGE_NAME}
+        env:
+          IMAGE_NAME: ${{ matrix.docker-image }}
+          
