--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,39 @@ jobs:
     strategy:
       matrix:
         docker-image: ${{ fromJson(needs.get-image-names.outputs.image-list) }}
+      max-parallel: 5
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check Matrix
-        run: echo ${IMAGE_NAME}
+      - name: Build JSON
+        run: |
+          URL=${IMAGE_NAME} node index.js
+          cat output.json
+          mkdir -p /tmp/json-library
+          cp output.json /tmp/json-library
         env:
           IMAGE_NAME: ${{ matrix.docker-image }}
+
+      - name: Upload JSON
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image-json
+          path: /tmp/json-library/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge-json-output:
+    name: Merge JSON output files
+    runs-on: ubuntu-latest
+    needs: build-json-files
+    
+    steps:
+      - name: Download JSON Files
+        uses: actions/download-artifact@v3
+        with:
+          name: docker-image-json
+          path: /tmp/json-library
+      
+      - name: List Files
+        working-directory: /tmp/json-library
+        run: ls -l
