--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ on:
 
 jobs:
   get-image-names:
+    if: github.ref == '00000'
     runs-on: ubuntu-latest
     outputs:
       image-list: ${{ steps.build-image-list.outputs.IMAGE_LIST }}
@@ -35,10 +36,11 @@ jobs:
 
   build-json-files:
     runs-on: ubuntu-latest
-    needs: get-image-names
+    # needs: get-image-names
     strategy:
       matrix:
-        docker-image: ${{ fromJson(needs.get-image-names.outputs.image-list) }}
+        # docker-image: ${{ fromJson(needs.get-image-names.outputs.image-list) }}
+        docker-image: [alpine, php]
       max-parallel: 5
     steps:
       - uses: actions/checkout@v4
