--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
 
   build-json-files:
     runs-on: ubuntu-latest
-    needs: get-latest-commit
+    # needs: get-latest-commit
     # needs: get-image-names
     strategy:
       matrix:
