--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,15 +110,15 @@ jobs:
               owner: 'docker-library',
               repo: 'official-images'
             });
-            return commits[0].sha;
+            return JSON.stringify(commits);
       
-      - name: Touch SHA
-        run: |
-          echo docker-library/official-images SHA: ${SHA}
-          echo "${SHA}" > /tmp/json-library.sha
-          cat /tmp/json-library.sha
-        env:
-          SHA: ${{ steps.get-sha.outputs.result }}
+      # - name: Touch SHA
+      #   run: |
+      #     echo docker-library/official-images SHA: ${SHA}
+      #     echo "${SHA}" > /tmp/json-library.sha
+      #     cat /tmp/json-library.sha
+      #   env:
+      #     SHA: ${{ steps.get-sha.outputs.result }}
 
       - name: Upload JSON
         uses: actions/upload-artifact@v3
@@ -128,13 +128,13 @@ jobs:
           if-no-files-found: error
           retention-days: 1
       
-      - name: Upload JSON
-        uses: actions/upload-artifact@v3
-        with:
-          name: docker-image-commit
-          path: /tmp/json-library.sha
-          if-no-files-found: error
-          retention-days: 14
+      # - name: Upload JSON
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: docker-image-commit
+      #     path: /tmp/json-library.sha
+      #     if-no-files-found: error
+      #     retention-days: 14
 
   merge-json-output:
     name: Merge JSON output files
