--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ on:
 
 jobs:
   get-latest-commit:
-    if: github.ref == '00000'
     runs-on: ubuntu-latest
     outputs:
       new-commit: ${{ steps.get-archived-sha.outputs.ARCHIVEDSHA }}
@@ -79,8 +78,9 @@ jobs:
 
 
   build-json-files:
+    if: github.ref == '00000'
     runs-on: ubuntu-latest
-    # needs: get-latest-commit
+    needs: get-latest-commit
     # needs: get-image-names
     strategy:
       matrix:
@@ -152,21 +152,21 @@ jobs:
         working-directory: /tmp/json-library
         run: ls -l
 
-      - name: Add latest tag
-        uses: actions/github-script@v6
-        if: github.ref != 'refs/tags/latest'
-        with:
-          github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          script: |
-            await github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: "refs/tags/latest",
-              sha: context.sha
-            })
+      # - name: Add latest tag
+      #   uses: actions/github-script@v6
+      #   if: github.ref != 'refs/tags/latest'
+      #   with:
+      #     github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
+      #     script: |
+      #       await github.rest.git.createRef({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         ref: "refs/tags/latest",
+      #         sha: context.sha
+      #       })
 
-      - name: Release Files
-        uses: ncipollo/release-action@v1
-        if: github.ref == 'refs/tags/latest'
-        with:
-          artifacts: "/tmp/json-library/*"
+      # - name: Release Files
+      #   uses: ncipollo/release-action@v1
+      #   if: github.ref == 'refs/tags/latest'
+      #   with:
+      #     artifacts: "/tmp/json-library/*"
