--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   get-latest-commit:
+    if: github.ref == '00000'
     runs-on: ubuntu-latest
     outputs:
       new-commit: ${{ steps.get-archived-sha.outputs.ARCHIVEDSHA }}
@@ -78,7 +79,7 @@ jobs:
 
 
   build-json-files:
-    if: github.ref == '00000'
+    # if: github.ref == '00000'
     runs-on: ubuntu-latest
     needs: get-latest-commit
     # needs: get-image-names
@@ -128,13 +129,13 @@ jobs:
           if-no-files-found: error
           retention-days: 1
       
-      # - name: Upload JSON
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: docker-image-commit
-      #     path: /tmp/json-library.sha
-      #     if-no-files-found: error
-      #     retention-days: 14
+      - name: Upload JSON
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image-commit
+          path: /tmp/json-library.sha
+          if-no-files-found: error
+          retention-days: 14
 
   merge-json-output:
     name: Merge JSON output files
