--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,9 +79,9 @@ jobs:
 
 
   build-json-files:
-    # if: github.ref == '00000'
+    
     runs-on: ubuntu-latest
-    needs: get-latest-commit
+    # needs: get-latest-commit
     # needs: get-image-names
     strategy:
       matrix:
