--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ on:
 
 jobs:
   get-latest-commit:
-    if: github.ref == '00000'
     runs-on: ubuntu-latest
     outputs:
       new-commit: ${{ steps.get-archived-sha.outputs.ARCHIVEDSHA }}
@@ -79,9 +78,9 @@ jobs:
 
 
   build-json-files:
-    
+    if: github.ref == '00000'
     runs-on: ubuntu-latest
-    # needs: get-latest-commit
+    needs: get-latest-commit
     # needs: get-image-names
     strategy:
       matrix:
