--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,18 +158,17 @@ jobs:
             });
             const sha=commits.data[0].sha;
 
-            await github.rest.actions.updateRepoVariable({
-              owner: 'context.repo.owner',
-              repo: 'context.repo.repo',
-              name: 'DOCKER_LIBRARY_SHA',
-              value: sha
-            });
-
             return sha
 
-      - name: echo SHA
+      - name: Store SHA in Github Variable
         run: |
           echo docker-library/official-images SHA: ${SHA}
+          gh api --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${GITHUB_REPOSITORY}/actions/variables/ \
+            -f name='DOCKER_LIBRARY_SHA' \
+            -f value='${SHA}'
         env:
           SHA: ${{ steps.get-sha.outputs.result }}
       
