--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,6 +170,7 @@ jobs:
             -f name='DOCKER_LIBRARY_SHA' \
             -f value='${SHA}'
         env:
+          GH_TOKEN: ${{ secrets.TOKEN_FOR_ACTIONS }}
           SHA: ${{ steps.get-sha.outputs.result }}
       
   check-artifact:
