--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -163,6 +163,7 @@ jobs:
       - name: Store SHA in Github Variable
         run: |
           echo docker-library/official-images SHA: ${SHA}
+          echo github repository: ${GITHUB_REPOSITORY}
           gh api --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
