--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,24 +120,14 @@ jobs:
         working-directory: /tmp/json-library
         run: ls -l
 
-      # - name: Add latest tag
-      #   uses: actions/github-script@v6
-      #   if: github.ref != 'refs/tags/latest'
-      #   with:
-      #     github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-      #     script: |
-      #       await github.rest.git.createRef({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         ref: "refs/tags/latest",
-      #         sha: context.sha
-      #       })
-
-      # - name: Release Files
-      #   uses: ncipollo/release-action@v1
-      #   if: github.ref == 'refs/tags/latest'
-      #   with:
-      #     artifacts: "/tmp/json-library/*"
+      - name: Release Files
+        uses: ncipollo/release-action@v1
+        if: github.ref == 'refs/tags/latest'
+        with:
+          artifacts: "/tmp/json-library/*"
+          allowUpdates: true
+          name: latest
+          body: Release artifacts have been updated to reflect [docker-library/official-images](https://github.com/docker-library/official-images/tree/${{ vars.DOCKER_LIBRARY_SHA }}) commit `${{ vars.DOCKER_LIBRARY_SHA }}.
 
   store-latest-commit-sha:
     name: Store docker-library commit SHA
@@ -173,54 +163,3 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.TOKEN_FOR_ACTIONS }}
           SHA: ${{ steps.get-sha.outputs.result }}
-      
-  check-artifact:
-    runs-on: ubuntu-latest
-    needs: store-latest-commit-sha
-    steps:
-      - name: Download sha artifact
-        id: download-sha-artifact
-        continue-on-error: true
-        uses: actions/download-artifact@v3
-        with:
-          name: docker-image-commit
-          path: /tmp
-      
-      - name: Get Archived SHA
-        if: steps.download-sha-artifact.outcome == 'success'
-        id: get-archived-sha
-        run: |
-          SHA=$(cat /tmp/json-library.sha)
-          echo Archived SHA: ${SHA}
-          echo "ARCHIVEDSHA=$SHA" >> $GITHUB_OUTPUT
-      
-      - name: Get latest commit SHA
-        id: get-latest-sha
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          result-encoding: string
-          script: |
-            const commits = await github.rest.repos.listCommits({
-              owner: 'docker-library',
-              repo: 'official-images'
-            });
-            return commits.data[0].sha;
-        
-      - name: Compare SHAs
-        id: compare-sha
-        run: |
-          echo Archived SHA: ${ARCHIVEDSHA}
-          echo Latest SHA:   ${LATESTSHA}
-          if [[ $ARCHIVEDSHA == $LATESTSHA ]]; then 
-            NEWCOMMIT=true
-            
-          else
-            NEWCOMMIT=false
-          fi
-
-          echo "NEWCOMMIT=$NEWCOMMIT" >> $GITHUB_OUTPUT
-          echo "NEWCOMMIT=$NEWCOMMIT"
-        env:
-          ARCHIVEDSHA: ${{ steps.get-archived-sha.outputs.ARCHIVEDSHA }}
-          LATESTSHA: ${{ steps.get-latest-sha.outputs.result }}
