--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,61 +1,14 @@
 name: Docker Official Images JSON Builder
 
 on: 
-  pull_request:
-    types: [opened, synchronize, reopened]
   push:
     branches: [main]
-    paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
-    tags:
-      - 'latest'
-  release:
-    types: published
-  schedule:
-    # 4am every Saturday
-    - cron: '0 4 * * 6'
+    paths:
+      - 'build_sha.txt'
 
 jobs:
-  get-latest-commit:
-    runs-on: ubuntu-latest
-    outputs:
-      new-commit: ${{ steps.compare-sha.outputs.NEWCOMMIT }}
-    steps:       
-      - name: Get latest commit SHA
-        id: get-latest-sha
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          result-encoding: string
-          script: |
-            const commits = await github.rest.repos.listCommits({
-              owner: 'docker-library',
-              repo: 'official-images'
-            });
-            return commits.data[0].sha;
-
-      - name: Compare SHAs
-        id: compare-sha
-        run: |
-          echo Archived SHA: ${ARCHIVEDSHA}
-          echo Latest SHA:   ${LATESTSHA}
-          if [[ $ARCHIVEDSHA == $LATESTSHA ]]; then 
-            NEWCOMMIT=false
-            
-          else
-            NEWCOMMIT=true
-          fi
-
-          echo "NEWCOMMIT=$NEWCOMMIT" >> $GITHUB_OUTPUT
-          echo "NEWCOMMIT=$NEWCOMMIT"
-        env:
-          ARCHIVEDSHA: ${{ vars.DOCKER_LIBRARY_SHA }}
-          LATESTSHA: ${{ steps.get-latest-sha.outputs.result }}
-      
-    
   get-image-names:
-    if: github.ref == '00000'
+    if: github.ref == 'JOB DISABLED FOR NOW'
     runs-on: ubuntu-latest
     outputs:
       image-list: ${{ steps.build-image-list.outputs.IMAGE_LIST }}
@@ -74,10 +27,7 @@ jobs:
           jq . <<< "$LS"
 
   build-json-files:
-    if: needs.get-latest-commit.outputs.new-commit == 'true' || startsWith(github.event.head_commit.message, 'FORCE_BUILD=TRUE')
-        
     runs-on: ubuntu-latest
-    needs: get-latest-commit
     # needs: get-image-names
     strategy:
       matrix:
@@ -124,45 +74,10 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "/tmp/json-library/*"
-          allowUpdates: true
           token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          tag: latest
-          name: latest
+          tag: v-${{ vars.DOCKER_LIBRARY_SHA }}
+          name: Release for ${{ vars.DOCKER_LIBRARY_SHA }}
+          makeLatest: true
           replacesArtifacts: true
           body: |
             Release artifacts have been updated to reflect [docker-library/official-images](https://github.com/docker-library/official-images) commit [`${{ vars.DOCKER_LIBRARY_SHA }}`](https://github.com/docker-library/official-images/tree/${{ vars.DOCKER_LIBRARY_SHA }}).
-
-  store-latest-commit-sha:
-    name: Store docker-library commit SHA
-    runs-on: ubuntu-latest
-    needs: build-json-files
-
-    steps:
-      - name: Get latest commit SHA
-        id: get-sha
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          result-encoding: string
-          script: |
-            const commits = await github.rest.repos.listCommits({
-              owner: 'docker-library',
-              repo: 'official-images'
-            });
-            const sha=commits.data[0].sha;
-
-            return sha
-
-      - name: Store SHA in Github Variable
-        run: |
-          echo docker-library/official-images SHA: ${SHA}
-          echo github repository: ${GITHUB_REPOSITORY}
-          gh api --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${GITHUB_REPOSITORY}/actions/variables/DOCKER_LIBRARY_SHA \
-            -f name='DOCKER_LIBRARY_SHA' \
-            -f value="${SHA}"
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          SHA: ${{ steps.get-sha.outputs.result }}
