--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,14 +70,42 @@ jobs:
         working-directory: /tmp/json-library
         run: ls -l
 
+      - name: Get latest commit SHA
+        id: get-latest-sha
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
+          result-encoding: string
+          script: |
+            const commits = await github.rest.repos.listCommits({
+              owner: 'docker-library',
+              repo: 'official-images'
+            });
+            return commits.data[0].sha;
+
       - name: Release Files
         uses: ncipollo/release-action@v1
         with:
           artifacts: "/tmp/json-library/*"
           token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          tag: v-${{ vars.DOCKER_LIBRARY_SHA }}
-          name: Release for ${{ vars.DOCKER_LIBRARY_SHA }}
+          tag: v-${{ steps.get-latest-sha.outputs.result }}
+          name: Release for ${{ steps.get-latest-sha.outputs.result }}
           makeLatest: true
           replacesArtifacts: true
           body: |
-            Release artifacts have been updated to reflect [docker-library/official-images](https://github.com/docker-library/official-images) commit [`${{ vars.DOCKER_LIBRARY_SHA }}`](https://github.com/docker-library/official-images/tree/${{ vars.DOCKER_LIBRARY_SHA }}).
+            Release artifacts have been updated to reflect [docker-library/official-images](https://github.com/docker-library/official-images) commit [`${{ steps.get-latest-sha.outputs.result }}`](https://github.com/docker-library/official-images/tree/${{ steps.get-latest-sha.outputs.result }}).
+      
+      - name: Store SHA in Github Variable
+        run: |
+          echo docker-library/official-images SHA: ${SHA}
+          echo github repository: ${GITHUB_REPOSITORY}
+          gh api --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${GITHUB_REPOSITORY}/actions/variables/DOCKER_LIBRARY_SHA \
+            -f name='DOCKER_LIBRARY_SHA' \
+            -f value="${SHA}"
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN_FOR_ACTIONS }}
+          SHA: ${{ steps.get-latest-sha.outputs.result }}
+          
