--- a/.github/workflows/check-sha.yml
+++ b/.github/workflows/check-sha.yml
@@ -68,26 +68,14 @@ jobs:
         if: startsWith(github.event.head_commit.message, 'FORCE_BUILD=TRUE')
         run: |
           echo "FORCE_BUILD: ${LATEST_PHP_SHA}" > ./build_sha.txt
+          git status
         env:
           LATEST_SHA: ${{ needs.get-latest-commit.outputs.latest-sha }}
 
-      - name: Store SHA in Github Variable
-        run: |
-          echo docker-library/official-images SHA: ${SHA}
-          echo github repository: ${GITHUB_REPOSITORY}
-          gh api --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${GITHUB_REPOSITORY}/actions/variables/DOCKER_LIBRARY_SHA \
-            -f name='DOCKER_LIBRARY_SHA' \
-            -f value="${SHA}"
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN_FOR_ACTIONS }}
-          SHA: ${{ needs.get-latest-commit.outputs.latest-sha }}
-      
       - name: Git Add and Commit
         uses: EndBug/add-and-commit@v9
         with:
           add: './build_sha.txt'
           author_name: 'daily-check-cron-sohmc-docker-image-library-jsonizer'
           author_email: 'ca540d71efa149beb6638d8d17643cec@schedule.github.actions'
+            
