removed dot notation

--- a/.github/workflows/check-sha.yml
+++ b/.github/workflows/check-sha.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Git Add and Commit
         uses: EndBug/add-and-commit@v9
         with:
-          add: './build_sha.txt'
+          add: 'build_sha.txt'
           author_name: 'daily-check-cron-sohmc-docker-image-library-jsonizer'
           author_email: 'ca540d71efa149beb6638d8d17643cec@schedule.github.actions'
             
