--- a/.github/workflows/check-sha.yml
+++ b/.github/workflows/check-sha.yml
@@ -7,6 +7,7 @@ on:
       - 'README.md'
       - 'LICENSE'
       - 'garbage.txt'
+      - 'build_sha.txt'
   schedule:
     # 12:34 AM every day
     - cron: '34 0 * * *'
