removed text commit and instead calls the workflow directly
If the schedule disables after 60 days, I'll know that storing the
variable doesn't count as repository activity

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: Docker Official Images JSON Builder
 
-on: 
-  push:
-    branches: [main]
-    paths:
-      - 'build_sha.txt'
+on: workflow_call
 
 jobs:
   get-image-names:
