--- a/.github/workflows/check-sha.yml
+++ b/.github/workflows/check-sha.yml
@@ -7,7 +7,6 @@ on:
       - 'README.md'
       - 'LICENSE'
       - 'garbage.txt'
-      - 'build_sha.txt'
   schedule:
     # 12:34 AM every day
     - cron: '34 0 * * *'
@@ -51,35 +50,9 @@ jobs:
 
   trigger-build:
     if: needs.get-latest-commit.outputs.new-commit == 'true' || startsWith(github.event.head_commit.message, 'FORCE_BUILD=TRUE')
-    name: Store docker-library commit SHA
-    runs-on: ubuntu-latest
     needs: get-latest-commit
+    name: Store docker-library commit SHA    
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.TOKEN_FOR_ACTIONS }}
-
-      - name: Update LATEST
-        if: needs.get-latest-commit.outputs.new-commit == 'true'
-        run: |
-          echo "LATEST: ${LATEST_SHA}" > ./build_sha.txt
-        env:
-          LATEST_SHA: ${{ needs.get-latest-commit.outputs.latest-sha }}
-  
-      - name: Update FORCE_BUILD
-        if: startsWith(github.event.head_commit.message, 'FORCE_BUILD=TRUE')
-        run: |
-          echo "FORCE_BUILD: ${LATEST_PHP_SHA}" > ./build_sha.txt
-        env:
-          LATEST_SHA: ${{ needs.get-latest-commit.outputs.latest-sha }}
-
-      - run: git status
-
-      - name: Git Add and Commit
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: 'build_sha.txt'
-          author_name: 'daily-check-cron-sohmc-docker-image-library-jsonizer'
-          author_email: 'ca540d71efa149beb6638d8d17643cec@schedule.github.actions'
             
