--- a/.github/workflows/check-sha.yml
+++ b/.github/workflows/check-sha.yml
@@ -11,6 +11,8 @@ on:
     # 12:34 AM every day
     - cron: '34 0 * * *'
 
+permissions: read-all
+
 jobs:
   get-latest-commit:
     runs-on: ubuntu-latest
@@ -22,7 +24,7 @@ jobs:
         id: get-latest-sha
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
+          # github-token: ${{ secrets.TOKEN_FOR_ACTIONS }}
           result-encoding: string
           script: |
             const commits = await github.rest.repos.listCommits({
